# LightBox

./: CHANGELOG.md  CLAUDE.md  Conductor.py  CosmicLED.py  DEPLOYMENT_VERIFICATION.md  LICENSE  QUICK_REFERENCE.md  README.md  RULES.md  TROUBLESHOOTING.md  activate_aicheck_claude.sh  animation_test.py  clean_pi_env.sh  config.py  diagnose.py  diagnose_gpio.py  fix_gpio.sh  fix_pi_gpio.sh  led_debug.py  lightbox.service  logging_config.py  production_test.py  pyproject.toml  quick_fix.sh  requirements-minimal.txt  requirements.txt  run_simulation.py  service_manager.py  settings.json  setup-minimal.sh  setup.sh  simple_led_test.py  simple_test.py  start_web.py  test_pins.py
.aicheck/: actions_index.md  current_action  previous_action
.aicheck.backup.20250620_154858/: actions_index.md
.aicheck.backup.20250623_120731/actions/light-box-workspace/: progress.md
.aicheck.backup.20250623_131459/.mcp/server/: package-lock.json
.aicheck.backup.20250623_131459/actions/light-box-workspace/: light-box-workspace-plan.md
.aicheck.backup.20250623_131459/configs/: current_action
hardware/: buttons.py  oled.py
scripts/: aurora.py  clouds.py  color_test.py  cosmic_nebulas.py  feathers.py  feathers_bpm.py  halftone_waves.py  hypercube_120bpm.py  hypercube_simple.py  hypnotic_cosmos.py  matrix_test.py  music_sync_120.py  organic_flow.py  plasma_bpm.py  plasma_field.py  shimmer.py  simple_color_test.py  solid_red.py  symmetry.py  zen_garden.py
tests/: __init__.py  test_config.py
webgui/: README.md  app.py
webgui/static/: app.js  style.css
webgui/templates/: index.html
(+10 files in other folders)
