[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightbox-led-matrix"
version = "1.0.0"
description = "LightBox LED Matrix Animation System"
readme = "LightBox/README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0",
    "flask-cors>=4.0",
    "adafruit-blinka>=8.0",
    "adafruit-circuitpython-neopixel>=6.0",
    "numpy>=1.20",
    "pillow>=9.0",
    "psutil>=5.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.setuptools.packages.find]
where = ["LightBox"]